<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingBottom="32dp"
        android:layout_marginHorizontal="16dp">

        <TextView
            android:id="@+id/tv_mediform"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_mediform"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/tv_mediform">

            <LinearLayout
                android:id="@+id/ll_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="2"
                    android:text="@string/text_name"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/neutral_200"
                    android:padding="6dp"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_no_rm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="2"
                    android:text="@string/text_no_rm"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_no_rm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/neutral_200"
                    android:padding="6dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_tanggal_lahir"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="2"
                    android:text="@string/text_tanggal_lahir"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_tanggal_lahir"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/neutral_200"
                    android:padding="6dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_agama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="2"
                    android:text="@string/text_agama"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_agama"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/neutral_200"
                    android:padding="6dp" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/ll_jenis_kelamin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="2"
                    android:text="@string/text_jenis_kelamin"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_jenis_kelamin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/neutral_200"
                    android:padding="6dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_alamat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="2"
                    android:text="@string/text_alamat"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_alamat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:background="@color/neutral_200"
                    android:padding="6dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_pekerjaan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="2"
                    android:text="@string/text_pekerjaan"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_pekerjaan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/neutral_200"
                    android:padding="6dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_askes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="2"
                    android:text="@string/text_status_askes"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_askes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/neutral_200"
                    android:padding="6dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_status_kawin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="2"
                    android:text="@string/text_status_kawin"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_status_kawin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/neutral_200"
                    android:padding="6dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_penanggung_jawab"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="2"
                    android:text="@string/text_nama_penanggung_jawab"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_penanggung_jawab"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:background="@color/neutral_200"
                    android:padding="6dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_golongan_darah"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="2"
                    android:text="@string/text_golongan_darah"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_golongan_darah"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/neutral_200"
                    android:padding="6dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_riwayat_penyakit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="2"
                    android:text="@string/text_riwayat_penyakit"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_riwayat_penyakit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/neutral_200"
                    android:padding="6dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_alergi_obat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="2"
                    android:text="@string/text_alergi_obat"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_alergi_obat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/neutral_200"
                    android:padding="6dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_keadaan_keluar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="2"
                    android:text="@string/text_keadaan_keluar"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_keadaan_keluar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/neutral_200"
                    android:padding="6dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_cara_keluar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="2"
                    android:text="@string/text_cara_keluar"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_no_RM"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/neutral_200"
                    android:padding="6dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_dokter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="2"
                    android:text="@string/text_dokter"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_dokter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/neutral_200"
                    android:padding="6dp" />
            </LinearLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>